--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 name: "7Targets Blog"
 title: "7Targets Blog"
 description: "Applying Artificial Intelligence to Sales"
-logo: 'assets/images/logo.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/images/7ts-logo.png'
+favicon: 'assets/images/logo1.png'
 baseurl: /blog
 url: https://7targets.ai
 google_analytics: 'UA-140617154-1'
-disqus: 'ggnagarkar'
+# disqus: 'ggnagarkar'
 #mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
