--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ authors:
     email: gg@7targets.com
     web: https://www.linkedin.com/in/gunanandnagarkar
     twitter: https://twitter.com/ggnagarkar
+    youtube: https://www.youtube.com/channel/UCXsyy4xmzUEISJXcUTg3osQ
     description: "Gunanand (aka GG) is known for bringing 3 things on board – Efficiency, Engagement and Enthusiasm. Presently focused on creating strategic solutions in Sales and Marketing domain with optimal use of AI/ML technology.
 
 Background: Infrastructure, Cloud, Application Monitoring, Event Management, Root Causal Analysis, BSM integrations, Big Data Analytics.
@@ -36,6 +37,7 @@ Success: Founded and sold Opex Software/REAN cloud to Hitachi Vantara. Big contr
     email: sanju.burkule@7targets.com
     web: https://www.linkedin.com/in/sanjuburkule
     twitter: https://twitter.com/sanjuburkule
+    youtube: https://www.youtube.com/channel/UCXsyy4xmzUEISJXcUTg3osQ
     description: "Sanju is a serial entrepreneur. 2 decades of experience. Loves automating stuff. Recent obsession is around adding intelligence in marketing and sales solutions. He is currently focusing on a simple but very important problem of figuring out the best ways to intelligently respond to leads on time (not too fast, and not too late) to help get a meeting.
 
 His new mission is ‘Personalisation at scale for all at reasonably low cost’.
