place holder blog

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,16 @@ email: info@7targets.com
 
 # Authors
 authors:
+  Bharat:
+    name: Bharat
+    display_name: Bharat
+    avatar: 
+    # gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    email: 
+    web: 
+    twitter: 
+    youtube: 
+    description: 
   GG:
     name: GG Nagarkar
     display_name: GG
