title change for SEO

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
-name: "7Targets Blog"
-title: "7Targets Blog"
+name: "7Targets AI Sales Assistant"
+title: "7Targets AI Sales Assistant"
 description: "Applying Artificial Intelligence to Sales"
 logo: 'assets/images/7ts-logo.png'
 favicon: 'assets/images/logo1.png'
