--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ authors:
   Tanmay:
     name: Tanmay
     display_name: Tanmay
-    avatar: 
+    avatar: 'assets/images/Tanmay.jpeg'
     # gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: hello@tanmaysinghal.dev
     web: https://in.linkedin.com/in/tanmaysinghal98
