--- a/.github/workflows/static_website_QA.yml
+++ b/.github/workflows/static_website_QA.yml
@@ -29,6 +29,6 @@ jobs:
          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_QA }}
          aws-region: ${{ secrets.AWS_REGION_QA }}
 
-      - name: Sync output to S3 bucket in help folder
+      - name: Sync output to S3 bucket in blog folder
         run: |
           aws s3 sync ./_site/ s3://${{ secrets.S3_BUCKET_NAME_QA }}/blog --ac1 public-read --delete
