--- a/_s3_config.yml
+++ b/_s3_config.yml
@@ -1,101 +1,109 @@
-# ----
 # Site
+name: "7Targets AI Sales Assistant"
+title: "7Targets AI Sales Assistant"
+description: "Applying Artificial Intelligence to Sales"
+logo: 'assets/images/7ts-logo.png'
+favicon: 'assets/images/logo1.png'
+baseurl: blog/
+url: https://blog.7targets.ai
+google_analytics: 'UA-172903611-1'
+# disqus: 'ggnagarkar'
+#mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+include: ["_pages"]
+permalink: /:title/
+email: info@7targets.com
 
-title: 7Targets AI Sales Assistant
-url: "https://7targets.ai"
-baseurl: /help
-google_analytics_key:
-disqus_shortname:
-newsletter_action:
+# Authors
+authors:
+  Tanmay:
+    name: Tanmay
+    display_name: Tanmay
+    avatar: 'assets/images/Tanmay.jpeg'
+    # gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    email: hello@tanmaysinghal.dev
+    web: https://in.linkedin.com/in/tanmaysinghal98
+    twitter: https://twitter.com/tanmaysinghal98
+    youtube: 
+    description: Tanmay is an AI Enthusiast and a software engineer, specializing in building (mostly serverless) cloud native solution, applications, and everything in between. Solving complex problems by effectively using AI and ML along with Cloud native approach is his niche. 
+  Bharat:
+    name: Bharat
+    display_name: Bharat
+    avatar: 'assets/images/bharat.jpeg'
+    # gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    email: 
+    web: https://in.linkedin.com/in/bharat-nainani-653352175
+    twitter: 
+    youtube: 
+    description: Bharat is an AWS Certified Devops engineer. Solving simple to complex problems in Devops and Cloud is his passion.
+  GG:
+    name: GG Nagarkar
+    display_name: GG
+    avatar: 'assets/images/GG.png'
+    # gravatar: e56154546cf4be74e393c62d1ae9f9d4
+    email: gg@7targets.com
+    web: https://www.linkedin.com/in/gunanandnagarkar
+    twitter: https://twitter.com/ggnagarkar
+    youtube: https://www.youtube.com/channel/UCXsyy4xmzUEISJXcUTg3osQ
+    description: "Gunanand (aka GG) is known for bringing 3 things on board – Efficiency, Engagement and Enthusiasm. Presently focused on creating strategic solutions in Sales and Marketing domain with optimal use of AI/ML technology.
+Background: Infrastructure, Cloud, Application Monitoring, Event Management, Root Causal Analysis, BSM integrations, Big Data Analytics.
+Success: Founded and sold Opex Software/REAN cloud to Hitachi Vantara. Big contributor in the $950m DoD Cloud deal. (pre-JEDI deal)"
+  Sanju:
+    name: Sanju Burkule
+    display_name: Sanju
+    avatar: 'assets/images/sanju.jpeg'
+    # gravatar: b1cc14991db7a456fcd761680bbc8f81
+    email: sanju.burkule@7targets.com
+    web: https://www.linkedin.com/in/sanjuburkule
+    twitter: https://twitter.com/sanjuburkule
+    youtube: https://www.youtube.com/channel/UCXsyy4xmzUEISJXcUTg3osQ
+    description: "Sanju is a serial entrepreneur. 2 decades of experience. Loves automating stuff. Recent obsession is around adding intelligence in marketing and sales solutions. He is currently focusing on a simple but very important problem of figuring out the best ways to intelligently respond to leads on time (not too fast, and not too late) to help get a meeting.
+His new mission is ‘Personalisation at scale for all at reasonably low cost’.
+Background: Developer. Founded and sold Opex Software/REAN cloud to Hitachi Vantara. Was lucky to be a contributor in the $950m DoD Cloud deal (pre JEDI deal)."
 
-# Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /help/siteicon.png
-description: Knowledge Base for 7Targets AI Sales Assistant aka Virtual Sales Assistant
-author:
-  name: 7Targets Team
-  email: info@7targets.com
-  twitter: 7targets_
-social:
-  name: 7Targets Team
-  links:
-    - https://github.com/7targets/7targets-docs
-
-# -----
-# Build
-
-timezone: Etc/UTC
-
-permalink: /:categories/:title/
-  
+# Plugins
 plugins:
-  - jekyll-extract-element
+  - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-seo-tag
   - jekyll-feed
-  # - jekyll-archives
+  - jekyll-seo-tag
+  - jekyll-archives
+  - jekyll-figure
+    
+# Archives
+jekyll-archives:
+  enabled:
+    - categories
+  layout: archive
+  permalinks:
+    category: '/category/:name/'
+    
+# Pagination 
+paginate: 6
+paginate_path: /page:num/
+    
+# Other
+highlighter: none
+markdown: kramdown
+kramdown:
+   syntax_highlighter_opts:
+      disable : true
 
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - README.md
-  - LICENCE
-  - /vendor/bundle
-
-collections:
-  sets:
-  archives:
-    output: true
-    permalink: /archives/:path/
 
 
-# jekyll-archives:
-#   enabled: ['categories']
+# Adsense (change to "enabled" to activate, also your client id and ad slot. Create a new ad unit from your Adsense account to get the slot.)
+adsense: "disabled"
+adsense-data-ad-client: "ca-pub-3412143450191416"
+adsense-data-ad-slot: "1363087678"
 
-defaults:
-  -
-    scope:
-      path: ""
-    values:
-      layout: "default"
-  -
-    scope:
-      type: "posts"
-    values:
-      layout: "post"
-      comments: true
-  -
-    scope:
-      type: "archives"
-    values:
-      layout: "archive-categories"
-  -
-    scope:
-      type: "sets"
-    values:
-      _hide_content: true
-  -
-    scope:
-      path: "index.html"
-    values:
-      body_class: "show_hero_search"
+# Lazy Images ("enabled" or "disabled")
+lazyimages: "disabled"
 
-# -----------
-# 7Targets
+# Post Author Box ("enabled" or "disabled")
+authorbox: "enabled"
 
-social_icons:
-  - Facebook
-  # - Google Plus
-  # - Instagram
-  - LinkedIn
-  # - Pinterest
-  # - Tumblr
-  - Twitter
-  - YouTube
-  # - Email
-  # - RSS
+# Sass
+sass:
+  sass_dir: _sass
+  style: compressed
 
-types:
-  - Document
-  - Video
-
-_comments:
+exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock,/vendor/bundle/]
