--- a/_s3_config.yml
+++ b/_s3_config.yml
@@ -4,7 +4,7 @@ title: "7Targets AI Sales Assistant"
 description: "Applying Artificial Intelligence to Sales"
 logo: 'assets/images/7ts-logo.png'
 favicon: 'assets/images/logo1.png'
-baseurl: blog/
+baseurl: /blog
 url: https://blog.7targets.ai
 google_analytics: 'UA-172903611-1'
 # disqus: 'ggnagarkar'
@@ -106,4 +106,4 @@ sass:
   sass_dir: _sass
   style: compressed
 
-exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock,/vendor/bundle/]
+exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock, /vendor/bundle/]
