--- a/.github/workflows/static_website_QA.yml
+++ b/.github/workflows/static_website_QA.yml
@@ -29,7 +29,13 @@ jobs:
          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_QA }}
          aws-region: ${{ secrets.AWS_REGION_QA }}
          aws-s3-bucket: ${{ secrets.S3_BUCKET_NAME_QA }}
-
+         aws-cloudfront: ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }}
+         
       - name: Sync output to S3 bucket in blog folder
         run: |
           aws s3 sync ./_site/ s3://${{ secrets.S3_BUCKET_NAME_QA }}/blog --delete
+          
+      - name: Invalidate Cloudfront CDN
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths '/blog'
+      
+        
